# nmrToolsLab

./: README.md  setup.cfg  setup.py
example/Sparky_Lists/: example_sparky_lists.ipynb
example/Sparky_Lists/Data/: Matrixfile105-2rr.list  Matrixfile107-2rr.list  Matrixfile109-2rr.list  Matrixfile111-2rr.list  Matrixfile113-2rr.list  Matrixfile115-2rr.list  Matrixfile117-2rr.list  Matrixfile119-2rr.list  Matrixfile121-2rr.list  Matrixfile123-2rr.list  Matrixfile125-2rr.list
example/baseline/: example_baseline_correction.ipynb
example/pKa_Fitting/: example_pKa_fitting.ipynb
example/pKa_Fitting/Lists/: His_pH3_5.list  His_pH4.list  His_pH4_5.list  His_pH5.list  His_pH5_5.list  His_pH6.list  His_pH7.list  His_pH8.list
example/plot/: example_plot.ipynb
example/plot/data/1004/: acqu  acqus  (+10 more)
example/processing/: example_processing.ipynb
example/time_series/: example_times_series.ipynb
example/time_series/dataset_1/: dataset_test_1_Doublet_mol2_fit.txt  dataset_test_1_Doublet_mol3_fit.txt  dataset_test_1_Singlet_TSP_fit.txt
example/time_series/dataset_2/: dataset_test_2_Doublet_mol2_fit.txt  dataset_test_2_Doublet_mol3_fit.txt  dataset_test_2_Singlet_TSP_fit.txt
example/time_series/dataset_3/: dataset_test_3_Doublet_mol2_fit.txt  dataset_test_3_Doublet_mol3_fit.txt  dataset_test_3_Singlet_TSP_fit.txt
nmrtoolslab/: __init__.py  exp_series.py  pdb_analysis.py  plot_nmr_spectra.py  processing.py  processing_2.py  prot_analysis.py  simulate.py  spectrum.py  utils.py
nmrtoolslab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+36 files in other folders)
