[metadata]
name = nmrtoolslab
version = attr: nmrtoolslab.__version__
author = Cyril Charlier
author_email = charlier@insa-toulouse.fr
description = Tools for NMR work within the lab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NMRTeamTBI/nmrToolsLab
project_urls =
    Bug Tracker = https://github.com/NMRTeamTBI/nmrToolsLab/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5
install_requires =
    pandas>=0.17.1
    scipy>=0.12.1
    nmrglue>=0.6
    matplotlib >= 3.5.2
    numpy>=1.14.0
    plotly
    biopandas
    pybaselines

[options.entry_points]
console_scripts =
    nmrtoolslab = nmrtoolslab.__main__:main
